--- a/docs/Overlay.css
+++ b/docs/Overlay.css
@@ -123,7 +123,7 @@
 }
 
 .zoomX:hover {
-	color: rgba(225,228,231,1);/*#E1E4E7;*/ 	
+	color: red; /*rgba(225,228,231,1); #E1E4E7;*/ 	
 }
 
 .wb-inv {
