--- a/docs/Overlay.css
+++ b/docs/Overlay.css
@@ -117,14 +117,14 @@
 	padding: 0 8px;
 }
 				
-.zoomX {
-	font-size: 1.7em;
+/*.zoomX {
+	font-size: 1.8em;
 	color: #FFFFFF;
 }
 
 .zoomX:hover {
 	color: rgba(225,228,231,1);  	
-}
+}*/
 
 .wb-inv {
 	height: 1px;
