--- a/docs/Overlay.css
+++ b/docs/Overlay.css
@@ -102,7 +102,7 @@
 
 .closeIcon {
 	float: right; 
-	font-size: 1em; 
+	font-size: 1.7em; 
 	font-weight: 700; 
 	line-height: 0.8; 
 	color: #fff; 
@@ -118,7 +118,7 @@
 	display: block;
 	padding: 0 8px;
 }
-				
+/*				
 .zoomX {
 	font-size: 1.8em;
 	color: #FFFFFF;
@@ -127,6 +127,7 @@
 .zoomX:hover {
 	color: rgba(225,228,231,1);  	
 }
+*/
 
 .wb-inv {
 	height: 1px;
