--- a/src/Overlay.css
+++ b/src/Overlay.css
@@ -48,7 +48,8 @@
 	right: 0;
 	top: auto;
 	width: 35%;
-	bottom: 5%;
+	/*bottom: 5%;*/
+	bottom: 25px;
 		
 	/* flexible height */
 	max-height: 100%;
@@ -73,12 +74,12 @@
 	}
 }
 
-@media screen and (max-high: 500px) {
+/*@media screen and (max-high: 500px) {
 	.gc-im-wb-popup-mid {
 		bottom: 5% !important;
 	}
 }
-
+*/
 .gc-im-modal-body {
 	padding: 15px;
 }
