--- a/src/Overlay.css
+++ b/src/Overlay.css
@@ -48,11 +48,11 @@
 	right: 0;
 	top: auto;
 	width: 35%;
-	/*bottom: 5%;*/
-	bottom: 25px;
+	bottom: 5%;
+	/*bottom: 25px;*/
 		
 	/* flexible height */
-	max-height: 100%;
+	max-height: 90%;
 	
 }
 
